# rubik

./: .gitignore  AUTHORS  Canvas.cc  Canvas.hh  Cell.cc  ChangeLog  Colour.cc  Colour.hh  Cube.cc  Cube.hh  Jamroot  Makefile.am  README  TODO  Vector.cc  autogen.sh  configure.ac
src/: .gitignore  Canvas.cc  Canvas.hh  Cell.cc  Cell.hh  Colour.cc  Colour.hh  Control.cc  Control.hh  Cube.cc  Cube.hh  Makefile.am  Vector.cc  Vector.hh  main.cc
