# This file is part of Rubik.
#
# Rubik is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# Rubik is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with Rubik.  If not, see <http://www.gnu.org/licenses/>

bin_PROGRAMS = rubik

rubik_SOURCES = Canvas.cc Canvas.hh \
                Cell.cc Cell.hh \
                Colour.cc Colour.hh \
                Cube.cc Cube.hh \
                Vector.cc Vector.hh \
                main.cc
